--- a/src/com/qlsv/view/ManageAccount.form
+++ b/src/com/qlsv/view/ManageAccount.form
@@ -217,6 +217,10 @@
               <Connection code="new TextBubbleBorder(Color.MAGENTA.darker(), 1, 5, 0)" type="code"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="resetjButtonMouseClicked"/>
+            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="resetjButtonMouseEntered"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="passwordjTextField">
           <Properties>
